PROD-12-18-19/force-app/main/default/objects/Analyst__c/Analyst__c.object-meta.xml
<CustomObject>
    <description>PSG ALT used  object on leads and contacts</description>
    <label>Analyst</label>
    <nameField>
        <label>Analyst Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analyst</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>