PROD-12-18-19/force-app/main/default/objects/Analyst__c/fields/Analyst_del__c.field-meta.xml
<CustomField>
    <fullName>Analyst_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analyst</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Analyst</relationshipLabel>
    <relationshipName>Analyst_del</relationshipName>
    <type>Lookup</type>
</CustomField>