PROD-12-18-19/force-app/main/default/objects/Analyst__c/fields/Analyst_Phone__c.field-meta.xml
<CustomField>
    <fullName>Analyst_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>