PROD-12-18-19/force-app/main/default/objects/Analyst__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <label>Suffix</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFA</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>PhD</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>CAIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>